[package]
authors = [ "Khang Le <mkhangle20@gmail.com>" ]
name = "dem"
description = "GoldSrc demo parser and writer library"
version = "0.2.4"
edition = "2024"
readme = "README.md"
repository = "https://github.com/khanghugo/dem"
license-file = "LICENSE"
keywords = [ "goldsrc", "goldsource", "demo" ]
exclude = [ "src/tests" ]

[dependencies]
bitflags = "2.11.1"
bitvec = "1.0.1"
nom = "7.1.3"
thiserror = "2.0.18"
